<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCFC"
    tools:context=".SplashActivity">

    <!-- Top Orange Background -->
    <ImageView
        android:id="@+id/bg_orange"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_orange"
        android:contentDescription="@string/bg_orange_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="194dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-100dp"
        android:src="@drawable/logo_eta"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_orange" />

    <!-- Continuar Text -->

    <!-- Arrow Button using SVG -->

    <TextView
        android:id="@+id/continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/continue_text_desc"
        android:letterSpacing="0.01"
        android:text="@string/continuar"
        android:textColor="#9E9E9E"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnknownId" />


    <FrameLayout
        android:id="@+id/arrow_button_wrapper"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@id/continuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/continuar">

        <!-- Circular orange background -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/button"
            android:scaleType="fitXY" />

        <!-- White arrow icon -->
        <ImageView
            android:id="@+id/arrow_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/arrow"
            android:contentDescription="@string/arrow_button_desc"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
