<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFCFC">

    <!-- Background Orange -->
    <ImageView
        android:id="@+id/bg_orange_down"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_gravity="bottom"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bg_orange_cresc"
        android:src="@drawable/bg_orange_down" />

    <!-- Content Overlay -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo_eta"
            />

        <!-- Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/title_vendas"
            android:textColor="#424242"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/logo"
        />

        <!-- Search Bar -->
        <EditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tvTitle"
            android:layout_marginTop="60dp"
            android:clickable="true"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:focusable="true"
            android:hint="@string/hint_search_vendas"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#212121" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerVendas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/searchBar"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            tools:listitem="@layout/item_venda" />

    </RelativeLayout>

</FrameLayout>
