<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCFC"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <!-- Top orange vector -->
        <ImageView
            android:id="@+id/vector_top"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/bg_orange"
            android:scaleType="fitXY" />

        <!-- Sign In Title -->
        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vector_top"
            android:text="@string/sign_in"
            android:textColor="#424242"
            android:textSize="38sp"
            android:typeface="sans"
            android:layout_marginTop="16dp" />

        <!-- Orange underline -->
        <View
            android:id="@+id/underline"
            android:layout_width="74dp"
            android:layout_height="3dp"
            android:layout_below="@id/sign_in"
            android:layout_marginTop="4dp"
            android:background="#F16D26" />

        <!-- Email Label -->
        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/underline"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            android:textColor="#616161"
            android:textSize="16sp" />

        <!-- Email EditText -->
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_label"
            android:layout_marginTop="8dp"
            android:backgroundTint="#F16D26"
            android:hint="demo@email.com"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#BDBDBD" />

        <!-- Senha Label -->
        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_input"
            android:layout_marginTop="24dp"
            android:text="@string/senha"
            android:textColor="#616161"
            android:textSize="16sp" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_label"
            android:layout_marginTop="8dp"
            android:backgroundTint="#F16D26"
            android:hint="Coloque a senha"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#BDBDBD" />

        <!-- Remember Me and Forgot Password -->
        <LinearLayout
            android:id="@+id/login_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_input"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lembrar de mim"
                android:buttonTint="#F16D26"
                android:textColor="#F16D26"
                />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="Esqueceu a senha?"
                android:textColor="#F16D26" />
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_below="@id/login_options"
            android:layout_marginTop="7dp"
            android:backgroundTint="#F16D26"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:indeterminateTint="@android:color/white"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/signup_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Não tem uma conta?"
                android:textColor="#9E9E9E"
                android:layout_marginLeft="80dp"
                />


            <TextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Sign up"
                android:textColor="#F16D26"
                android:textStyle="bold"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
